--- a/PABuchungssystemSQL/PABuchungssystemSQL.csproj
+++ b/PABuchungssystemSQL/PABuchungssystemSQL.csproj
@@ -51,11 +51,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmBestellungBearbeiten.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmBestellungBearbeiten.Designer.cs">
+      <DependentUpon>frmBestellungBearbeiten.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBestellungen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBestellungen.Designer.cs">
+      <DependentUpon>frmBestellungen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmKunden.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmKunden.Designer.cs">
+      <DependentUpon>frmKunden.cs</DependentUpon>
     </Compile>
     <Compile Include="frmKundeBearbeiten.cs">
       <SubType>Form</SubType>
@@ -69,18 +81,42 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmProduktBearbeiten.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmProduktBearbeiten.Designer.cs">
+      <DependentUpon>frmProduktBearbeiten.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmProdukte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmProdukte.Designer.cs">
+      <DependentUpon>frmProdukte.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="Kunde.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+      <DependentUpon>frmKunden.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBestellungBearbeiten.resx">
+      <DependentUpon>frmBestellungBearbeiten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBestellungen.resx">
+      <DependentUpon>frmBestellungen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmKundeBearbeiten.resx">
       <DependentUpon>frmKundeBearbeiten.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmProduktBearbeiten.resx">
+      <DependentUpon>frmProduktBearbeiten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmProdukte.resx">
+      <DependentUpon>frmProdukte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
