--- a/PABuchungssystemSQL/PABuchungssystemSQL.csproj
+++ b/PABuchungssystemSQL/PABuchungssystemSQL.csproj
@@ -97,9 +97,6 @@
     <Compile Include="Kunde.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>frmKunden.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frmBestellungBearbeiten.resx">
       <DependentUpon>frmBestellungBearbeiten.cs</DependentUpon>
     </EmbeddedResource>
@@ -108,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmKundeBearbeiten.resx">
       <DependentUpon>frmKundeBearbeiten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmKunden.resx">
+      <DependentUpon>frmKunden.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
