--- a/PABuchungssystemSQL/PABuchungssystemSQL.csproj
+++ b/PABuchungssystemSQL/PABuchungssystemSQL.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Kunde.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="frmUebersicht.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUebersicht.Designer.cs">
+      <DependentUpon>frmUebersicht.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmBestellungBearbeiten.resx">
       <DependentUpon>frmBestellungBearbeiten.cs</DependentUpon>
     </EmbeddedResource>
@@ -127,6 +133,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmUebersicht.resx">
+      <DependentUpon>frmUebersicht.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
