--- a/PABuchungssystemSQL/PABuchungssystemSQL.csproj
+++ b/PABuchungssystemSQL/PABuchungssystemSQL.csproj
@@ -50,6 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBenutzerBearbeiten.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBenutzerBearbeiten.Designer.cs">
+      <DependentUpon>frmBenutzerBearbeiten.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBenutzerverwaltung.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBenutzerverwaltung.Designer.cs">
+      <DependentUpon>frmBenutzerverwaltung.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataAccess.cs" />
     <Compile Include="frmBestellungBearbeiten.cs">
       <SubType>Form</SubType>
@@ -103,6 +115,12 @@
     <Compile Include="frmUebersicht.Designer.cs">
       <DependentUpon>frmUebersicht.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmBenutzerBearbeiten.resx">
+      <DependentUpon>frmBenutzerBearbeiten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBenutzerverwaltung.resx">
+      <DependentUpon>frmBenutzerverwaltung.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBestellungBearbeiten.resx">
       <DependentUpon>frmBestellungBearbeiten.cs</DependentUpon>
     </EmbeddedResource>
